# file-transfer-cli

./: Cargo.toml  README.md  downloaded_file.txt
certs/: cert.pem  key.pem
src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs  tls.rs
