[package]
name = "secure-file-transfer"
version = "0.1.0"
edition = "2021"
authors = ["Maksim Vialykh"]
description = "A secure file transfer CLI with TLS encryption (client-server architecture)"
license = "MIT"
keywords = ["tls", "security", "file-transfer", "encryption", "cli"]
categories = ["command-line-utilities", "network-programming", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TLS implementation (pure Rust, no OpenSSL dependency)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

# Certificate generation
rcgen = "0.13"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bar for file transfers
indicatif = "0.17"

# Serialization for protocol messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for file integrity
sha2 = "0.10"
hex = "0.4"

# Utilities
bytes = "1.5"
futures = "0.3"

[[bin]]
name = "sft"
path = "src/main.rs"
